# movo

./: .gitignore  README.md  commit_changes.sh  index.html  package-lock.json  package.json  product-desc.md
docs/superpowers/plans/: 2026-06-28-voice-calendar.md  2026-06-30-global-chat-and-task-chat.md  2026-06-30-scheduling-engine.md  (+1 more)
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  voice-popup.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: gemini.rs  mod.rs  ollama.rs  openai.rs  provider.rs
src-tauri/src/commands/: auth.rs  calendar.rs  chat.rs  global_chat.rs  goals.rs  mod.rs  notifications.rs  planner.rs  preferences.rs  recommendations.rs  schedule.rs  task_chat.rs  tasks.rs  tray.rs  voice.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  repository.rs
src-tauri/src/models/: event.rs  goal.rs  message.rs  mod.rs  task.rs  user.rs  user_preferences.rs
src-tauri/src/scheduler/: conflict.rs  engine.rs  mod.rs  priority.rs
src/components/: AppSettingsDangerZone.tsx  AppSettingsSheet.tsx  Auth.tsx  CalendarView.tsx  CommandPalette.tsx  EmptyState.tsx  FocusSession.tsx  GlobalChat.tsx  GoalCapture.tsx  GoalChatView.tsx  GoalDetailView.tsx  InteractiveQuestion.tsx  NextActionWidget.tsx  Onboarding.tsx  ProjectChat.tsx  SettingsDropdown.tsx  Sidebar.tsx  TaskChatPanel.tsx  TaskList.tsx  TrayPopup.tsx  VoicePopup.tsx
src/hooks/: useVoiceInput.ts
src/store/: index.ts
src/utils/: messageParser.ts
(+4 files in other folders)
